--- a/02_college/index.html
+++ b/02_college/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
-    
+
 </head>
 <body>
     <section id="contents"> <!-- width: 100% -->
@@ -26,14 +26,80 @@
         </div> <!-- .titleWrap 끝 -->
         <div class="container"> <!-- width: 1200px -->
            <ul class="clearfix">
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
+               <li>
+                 <h1>한국에서<p>시작하는</p>새로운 꿈</h1>
+                 <div class="button">
+                   <p>자세히 보기</p>
+                 </div>
+               </li>
+               <li>
+                 <h2><span>APP</span>으로
+                   <p><span>스마트 도서관</span></p>
+                   바로이용하자!</h2>
+                 <div class="app">
+                   <p>모바일 열람증은
+                   <p>도서관 자료실/도서대출 등에</p>
+                   <p>사용할 수 있습니다.</p>
+                 </div>
+                 <div class="botton">
+                   <p>자세히 보기</p>
+                 </div>
+               </li>
+               <li>
+                 <h3>HOT LINK</h3>
+                 <div class="hot_link">
+                   <a href="#"><img src="images/hot_link_icon-01.png" alt="국제교류센터">
+                     <p>국제교류센터</p>
+                   </a>
+                   <a href="#"><img src="images/hot_link_icon-02.png" alt="원격지원시스템">
+                     <p>원격지원시스템</p>
+                   </a>
+                   <a href="#"><img src="images/hot_link_icon-03.png" alt="예산/결산공고">
+                     <p>예산/결산공고</p>
+                   </a>
+                 </div>
+               </li>
+               <li>
+                 <h3>공지사항</h3>
+                 <table class="notice">
+                   <tr>
+                     <td class="list_s">[공지] 한국대학교 웹진...</td>
+                     <td>2016-06-12</td>
+                   </tr>
+                   <tr>
+                     <td class="list_s">[보도] 우수대학교 선정 수상</td>
+                     <td>2016-06-17</td>
+                   </tr>
+                   <tr>
+                     <td class="list_s">[공지] 대학입시 설명회</td>
+                     <td>2016-06-05</td>
+                   </tr>
+                   <tr>
+                     <td class="list_s">[공지] 2016년 1학기 성적...</td>
+                     <td>2016-05-14</td>
+                   </tr>
+                 </table>
+               </li>
+               <li>
+                 <h3>SNS NEWS</h3>
+                 <p>한국대학교는 2017학년도 신입생 입학식을 3월 2일(목) 본교 종합체육관...</p>
+                 <img src="images/sns_icons.png" alt="페이스북, 트위터, 구글, 유튜브">
+               </li>
+               <li>
+                 <div class="campas">
+                   <p>캠퍼스 투어</p>
+                 </div>
+               </li>
+               <li>
+                 <a href="#"><img src="images/play_icon.png" alt="재생"></a>
+               </li>
+               <li>
+                 <h2>2017년 신.편입생 2차 모집</h2>
+                 <h1>2017.7.1~7.10</h1>
+                 <div class="botton">
+                   <p>입학사전예약</p>
+                 </div>
+               </li>
            </ul>
         </div> <!-- .container 끝 -->
     </section> <!-- #contents 끝 -->
