--- a/02_college/index.html
+++ b/02_college/index.html
@@ -8,9 +8,50 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
-
 </head>
+
 <body>
+  <header id="header">
+          <div class="top">
+              <div class="wrap clearfix"> <!--1200px-->
+                  <ul class="topMenu">
+                      <li><a href="#">대학교</a></li>
+                      <li><a href="#">입학안내</a></li>
+                      <li><a href="#">대학원</a></li>
+                  </ul>
+                  <ul class="sideMenu">
+                      <li><p>글자크기</p></li>
+                      <li>
+                          <img src="images/text-icon.png" alt="글자크기">
+                      </li>
+                      <li><a href="#">찾아오시는길</a></li>
+                      <li><a href="#">ENGLISH</a></li>
+                      <li><a href="#">사이트맵</a></li>
+                  </ul>
+              </div><!--//wrap-->
+          </div><!--//top-->
+          <div class="wrap clearfix">
+              <div class="logo">
+                  <a href="#" class="clearfix">
+                      <img src="images/logo.png" alt="한국대학교 로고">
+                      <div class="log_txt">
+                        <h2>한국대학교</h2>
+                        <p>HANGUK UNIVERSITY</p>
+                      </div>
+                  </a>
+              </div>
+              <div class="mainMenu">
+                  <ul>
+                      <li><a href="#">대학소개</a></li>
+                      <li><a href="#">학과소개</a></li>
+                      <li><a href="#">학사안내</a></li>
+                      <li><a href="#">대학생활</a></li>
+                      <li><a href="#">학생지원센터</a></li>
+                      <li><a href="#"><img src="images/menutogglebtn.png" alt="메뉴토글버튼"></a></li>
+                  </ul>
+              </div>
+          </div>
+    </header>
     <section id="contents"> <!-- width: 100% -->
         <div class="titleWrap"> <!-- width: 1200px -->
             <ul class="titleWrap1 clearfix"> <!-- float:left -->
@@ -18,10 +59,14 @@
                 <h2>세계로향하는 한국대학교</h2>
             </ul> <!-- .titleWrap1 끝 -->
             <ul class="titleWrap2 clearfix"> <!-- float:right -->
-                <li><a href="#"><img src="images/icon-01.png" alt="입학절차안내">입학절차안내</a></li>
-                <li><a href="#"><img src="images/icon-02.png" alt="입학설명회">입학설명회</a></li>
-                <li><a href="#"><img src="images/icon-03.png" alt="장학제도">장학제도</a></li>
-                <li><a href="#"><img src="images/icon-04.png" alt="증명서발급">증명서발급</a></li>
+                <li><a href="#"><img src="images/icon-01.png" alt="입학절차안내">
+                  <p>입학절차안내</p></a></li>
+                <li><a href="#"><img src="images/icon-02.png" alt="입학설명회">
+                  <p>입학설명회</p></a></li>
+                <li><a href="#"><img src="images/icon-03.png" alt="장학제도">
+                  <p>장학제도</p></a></li>
+                <li><a href="#"><img src="images/icon-04.png" alt="증명서발급">
+                  <p>증명서발급</p></a></li>
             </ul> <!-- .titleWrap2 끝 -->
         </div> <!-- .titleWrap 끝 -->
         <div class="container"> <!-- width: 1200px -->
