--- a/04_company/index_jentle_monster.html
+++ b/04_company/index_jentle_monster.html
@@ -50,61 +50,111 @@
 
   <div class="content">
     <ul class="contList">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/01.png" alt="">
+        <div class="textbox">
+          <h3>ZOYA</h3>
+          <P>ZOYA의 아이웨어 NANO GF3 02(OR)</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/02.png" alt="">
+        <div class="textbox">
+          <h3>PUGTOPUS CHIMERA</h3>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/03.png" alt="">
+        <div class="textbox">
+          <h3>SANKUANZ</h3>
+          <P>SANKUANZ의 선글라스 실리스 YG1(Y)</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/04.png" alt="">
+        <div class="textbox">
+          <h3>STELLA</h3>
+          <P>STELLA의 아이웨어 NANO GF3 032</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/05.png" alt="">
+        <div class="textbox">
+          <h3>MOVIE</h3>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/06.png" alt="">
+        <div class="textbox">
+          <h3>AILET</h3>
+          <P>AILET의 아이웨어 NANO G1 01</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/07.png" alt="">
+        <div class="textbox">
+          <h3>BRAINFISH CHIMERA</h3>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/08.png" alt="">
+        <div class="textbox">
+          <h3>UNOPEND:THE PROBE</h3>
+          <P>줄리아의 아이웨어 칠리칠리 02(P)</P>
+        </div>
+      </a></li>
     </ul>
   </div>
   <div class="container"> <!--width: 100%-->
     <div class="section"> <!--width: 1240px-->
-      <h4>비전</h4>
-      <p>VISION 2021</p>
-      <ul class="claerfix">
-        <li onclick="location.href='http://www.daum.net'">
-          <div class="card">
-            <img src="images/banner_icon01_01.png" alt="">
-            <div class="card_body">
-              <h3>Engineering</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, animi!</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="card">
-            <img src="images/banner_icon01_02.png" alt="">
-            <div class="card_body">
-              <h3>Engineering</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, animi!</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="card">
-            <img src="images/banner_icon01_03.png" alt="">
-            <div class="card_body">
-              <h3>Engineering</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, animi!</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="card">
-            <img src="images/banner_icon01_04.png" alt="">
-            <div class="card_body">
-              <h3>Engineering</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, animi!</p>
-            </div>
-          </div>
-        </li>
+      <ul class="contList2">
+        <li><a href="#"><img src="images_jentle_monster/09.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/10.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/11.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/12.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/13.png" alt=""></a></li>
       </ul>
-
     </div> <!-- section -->
   </div> <!-- container -->
+
+  <footer>
+    <div class="footer1">
+      <h4>고객 서비스</h4>
+      <p><a href="#">문의</a></p>
+      <p><a href="#">배송</a></p>
+      <p><a href="#">교환 및 반품</a></p>
+      <p><a href="#">주문 조회</a></p>
+      <p><a href="#">수리 서비스 가이드</a></p>
+      <p><a href="#">제품 사용 가이드</a></p>
+    </div>
+    <div class="footer2">
+      <h4>법적 고지</h4>
+      <p><a href="#">이용 약관</a></p>
+      <p><a href="#">개인정보처리방침</a></p>
+    </div>
+    <div class="footer3">
+      <h4>코드핑크</h4>
+      <p>코드핑크는 젠틀몬스터의 글로벌 가동근절 캠페인입니다.
+      젠틀몬스터는 '가품유통 근절' 정책을 통해 브랜드 명예를
+      실추시키는 가품유통망 적발과 지속적인 모니터링을 실시하고
+      있습니다.</p>
+    </div>
+    <div class="footer4">
+      <h4>젠틀몬스터를 만나보세요</h4>
+      <a href="#"><img src="images_jentle_monster/sns_logos.png" alt=""></a>
+    </div>
+    <div class="footer5">
+      <h3>ⓒ 2021 GENTLE MONSTER</h3>
+    </div>
+    <div class="footer6">
+      <h5>주) 아이아이컴바인드 대표자명: 김한국
+        사업자 번호: 119-86-38589
+        통신판매신고번호: 제 2014-서울마포-1050 호 (사업자 정보 확인)
+        이메일 문의 : cs@gentlemonster.com
+        주소: 서울특별시 마포구 어울마당로5길 41
+        전화번호: 1600-2126</h5>
+    </div>
+  </footer>
 
 
 
