--- a/04_company/index_jentle_monster.html
+++ b/04_company/index_jentle_monster.html
@@ -17,25 +17,27 @@
 </head>
 <body>
   <header>
-    <div id="headerTop" class="clearfix">
-      <h1 class="logo"><a href="#"><img src="images_jentle_monster/LOGO.png" alt="로고"></a></h1>
-      <div class="toggleMenu">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
+    <div id="headerTop" class="clearfix"> <!-- width: 100% -->
+      <div id="headerWrap"> <!-- width: 960px -->
+        <h1 class="logo"><a href="#"><img src="images_jentle_monster/LOGO.png" alt="로고"></a></h1>
+        <div class="toggleMenu">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+        <nav id="main_menu">
+          <ul class="clearfix">
+            <li><a href="#">선글라스</a></li>
+            <li><a href="#">안경</a></li>
+            <li><a href="#">콜라보레이션</a></li>
+            <li><a href="#">브랜드이슈</a></li>
+            <li><a href="#">매장보기</a></li>
+            <li><a href="#">수리서비스</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav id="main_menu">
-        <ul class="clearfix">
-          <li><a href="#">선글라스</a></li>
-          <li><a href="#">안경</a></li>
-          <li><a href="#">콜라보레이션</a></li>
-          <li><a href="#">브랜드이슈</a></li>
-          <li><a href="#">매장보기</a></li>
-          <li><a href="#">수리서비스</a></li>
-        </ul>
-      </nav>
-
     </div>
+
     <div class="sliderWrap">
       <ul class="slider">
         <li class="slider1st">
