--- a/04_company/index_jentle_monster.html
+++ b/04_company/index_jentle_monster.html
@@ -50,7 +50,7 @@
     </div>
   </header>
 
-  <div class="content">
+  <div class="content pc"> <!-- pc ver -->
     <ul class="contList">
       <li><a href="#">
         <img src="images_jentle_monster/01.png" alt="">
@@ -107,7 +107,78 @@
       </a></li>
     </ul>
   </div>
-  <div class="container"> <!--width: 100%-->
+
+  <div class="content mobile"> <!-- mobile ver. -->
+    <ul class="contList">
+      <li><a href="#">
+        <img src="images_jentle_monster/01.png" alt="">
+        <div class="textbox">
+          <h3>ZOYA</h3>
+          <P>ZOYA의 아이웨어 NANO GF3 02(OR)</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/02.png" alt="">
+        <div class="textbox">
+          <h3>PUGTOPUS CHIMERA</h3>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/mobile_03.png" alt="">
+        <div class="textbox">
+          <h3>SANKUANZ</h3>
+          <P>SANKUANZ의 선글라스 실리스 YG1(Y)</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/mobile_04.png" alt="">
+        <div class="textbox">
+          <h3>STELLA</h3>
+          <P>STELLA의 아이웨어 NANO GF3 032</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/mobile_05.png" alt="">
+        <div class="textbox">
+          <h3>MOVIE</h3>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/06.png" alt="">
+        <div class="textbox">
+          <h3>AILET</h3>
+          <P>AILET의 아이웨어 NANO G1 01</P>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/07.png" alt="">
+        <div class="textbox">
+          <h3>BRAINFISH CHIMERA</h3>
+        </div>
+      </a></li>
+      <li><a href="#">
+        <img src="images_jentle_monster/mobile_08.png" alt="">
+        <div class="textbox">
+          <h3>UNOPEND:THE PROBE</h3>
+          <P>줄리아의 아이웨어 칠리칠리 02(P)</P>
+        </div>
+      </a></li>
+    </ul>
+  </div>
+
+<div class="container pc"> <!--width: 100%--> <!-- pc -->
+    <div class="section"> <!--width: 1240px-->
+      <ul class="contList2">
+        <li><a href="#"><img src="images_jentle_monster/09.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/10.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/11.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/12.png" alt=""></a></li>
+        <li><a href="#"><img src="images_jentle_monster/13.png" alt=""></a></li>
+      </ul>
+    </div> <!-- section -->
+  </div> <!-- container -->
+
+  <div class="container mobile"> <!--width: 100%--> <!-- mobile -->
     <div class="section"> <!--width: 1240px-->
       <ul class="contList2">
         <li><a href="#"><img src="images_jentle_monster/09.png" alt=""></a></li>
